# XCoder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
src/xcoder/: __init__.py  __main__.py  bytestream.py  config.py  localization.py  pixel_utils.py  swf.py  xcod.py
src/xcoder/features/: cut_sprites.py  place_sprites.py
src/xcoder/languages/: en-EU.json  ru-RU.json  zh-CN.json
src/xcoder/math/: point.py  polygon.py
src/xcoder/matrices/: matrix2x3.py  matrix_bank.py
src/xcoder/objects/: plain_object.py  texture.py
system/: bytestream.py  localization.py
system/exceptions/: __init__.py
system/languages/: en-EU.json  ru-RU.json  ua-UA.json
system/lib/: __init__.py  config.py  images.py  main_menu.py  menu.py  pixel_utils.py  pvr_tex_tool.py  swf.py  xcod.py
system/lib/features/: cut_sprites.py  directories.py  files.py  initialization.py  ktx.py  place_sprites.py
system/lib/math/: point.py  polygon.py
system/lib/matrices/: __init__.py  matrix2x3.py  matrix_bank.py
system/lib/objects/: movie_clip.py  plain_object.py  shape.py  texture.py
tests/: polygon_test.py  test_polygon.py
xcoder/: __main__.py  config.py  console.py  images.py  localization.py  main_menu.py  menu.py  pixel_utils.py  pvr_tex_tool.py  swf.py
xcoder/exceptions/: __init__.py  tool_not_found.py
xcoder/features/: files.py  initialization.py  ktx.py  place_sprites.py
xcoder/features/csv/: compress.py
xcoder/features/sc/: __init__.py  decode.py
xcoder/features/update/: check.py
xcoder/languages/: en-EU.json  ru-RU.json  ua-UA.json  zh-CN.json
xcoder/math/: __init__.py  rect.py
xcoder/objects/: __init__.py  plain_object.py  texture.py
xcoder/objects/shape/: __init__.py  (+2 more)
(+31 files in other folders)
